--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
     "react-demo": "cd example && yarn && yarn start",
     "release": "node ./script/release.js",
     "test": "eslint src",
-    "version": "run-s release changelog"
+    "version": "run-s release changelog",
+    "preinstall": "npm run build"
   }
 }
